--- a/src/Presentation/SignalRApp.MvcUI/Views/Shared/Components/_MenuNavBarComponentPartial/Default.cshtml
+++ b/src/Presentation/SignalRApp.MvcUI/Views/Shared/Components/_MenuNavBarComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-
+  <div class="hero_area">
     <div class="bg-box">
       <img src="~/feane-1.0.0/images/hero-bg.jpg" alt="">
     </div>
@@ -19,20 +19,20 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item">
-                <a class="nav-link" href="/Default/Index/">AnaSayfa</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/Menu/Index/">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/AboutUI/Index/">Hakkımızda</a>
+                <a class="nav-link" href="/Default/Index/">AnaSayfa </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/BookATable/Index/">Rezervasyon<span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="/Menu/Index/">Menu <span class="sr-only">(current)</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/About/Index/">Hakkımızda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/BookATable/Index/">Rezervasyon</a>
               </li>
             </ul>
             <div class="user_option">
-              <a href="/Basket/Index/" class="user_link">
+              <a href="" class="user_link">
                 <i class="fa fa-user" aria-hidden="true"></i>
               </a>
               <a class="cart_link" href="/Basket/Index/">
@@ -94,8 +94,8 @@
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form>
-              <a href="/Menu/Index/" class="order_online">
-                Şipariş
+              <a href="/BookATable/Index/" class="order_online">
+                Sipariş Ver
               </a>
             </div>
           </div>
@@ -103,3 +103,4 @@
       </div>
     </header>
     <!-- end header section -->
+  </div>
