--- a/src/Presentation/SignalRApp.MvcUI/Views/Shared/Components/_LayoutSidebarComponentPartial/default.cshtml
+++ b/src/Presentation/SignalRApp.MvcUI/Views/Shared/Components/_LayoutSidebarComponentPartial/default.cshtml
@@ -94,6 +94,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="/Slider/Index">
+                        <i class="la la-fonticons"></i>
+                        <p>Slider</p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/Contact/Index/">
                         <i class="la la-fonticons"></i>
                         <p>İletişim</p>
