--- a/src/Presentation/SignalRApp.MvcUI/Views/Shared/Components/_UILayoutNavBarComponentPartial/Default.cshtml
+++ b/src/Presentation/SignalRApp.MvcUI/Views/Shared/Components/_UILayoutNavBarComponentPartial/Default.cshtml
@@ -8,7 +8,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="/Default/Index/">
             <span>
-              SignalR Restoran
+              SignalR Restorant
             </span>
           </a>
 
@@ -19,15 +19,15 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item">
-                <a class="nav-link" href="/Default/Index/">AnaSayfa</a>
+                <a class="nav-link active" href="/Default/Index/">AnaSayfa</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/Menu/Index/">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/AboutUI/Index/">Hakkımızda</a>
+                <a class="nav-link" href="/Default/Index/">Hakkımızda</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/BookATable/Index/">Rezervasyon<span class="sr-only">(current)</span> </a>
               </li>
             </ul>
