--- a/src/Presentation/SignalRApp.MvcUI/Views/Product/Index.cshtml
+++ b/src/Presentation/SignalRApp.MvcUI/Views/Product/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Tile"] = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
+    int count = 0;
 }
 
 <div class="content">
@@ -33,8 +34,9 @@
                             <tbody>
                             @foreach (var item in Model)
                             {
+                                count++;
                                 <tr>
-                                    <td>@item.Id</td>
+                                    <th>@count</th>
                                     <td>@item.Name</td>
                                     <td>@item.Price</td>
                                     <td>@item.Category.Name</td>
